# git-glee

./: main.py  pyproject.toml
jupyter/: petals test.ipynb  prompt.ipynb
jupyter/.ipynb_checkpoints/: petals test-checkpoint.ipynb
src/commit_glee/llm/: agent.py  git_executor.py  prompt.py
