[tool.poetry]
name = "commit-glee"
version = "0.1.0"
description = ""
authors = ["Furkan Melih Ercan <furkan.ercan@b2metric.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.6"
langchain = "^0.0.292"
gpt4all = "^1.0.12"
ctransformers = "^0.2.27"
petals = "^2.2.0"
transformers = "^4.33.2"
torch = "2.0.0"
click = "^8.1.7"


[tool.poetry.group.dev-dependencies.dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
